# ProxmoxAPI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: api.rst  conf.py  index.rst  quickstart.rst
examples/: 01_connect.py  02_list_vms.py  03_vm_lifecycle.py  04_snapshots.py  05_cluster_resources.py  06_lxc_container.py  07_node_management.py  08_guest_agent.py  09_bulk_operations.py  10_firewall.py  11_storage_management.py  12_user_management.py  13_backup_and_restore.py  14_pool_management.py  15_cloud_init.py  16_disk_management.py  17_ha_management.py
proxmox_api/: __init__.py  _base.py  access.py  client.py  cluster.py  lxc.py  node_resources.py  nodes.py  parse_apidoc.py  pools.py  qemu.py  storage.py
tests/: test_client.py  test_parse_apidoc.py
